# iLogger

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/iLogger/iLogger/: LogHandler.cpp  LogHandler.hpp  Logger.cpp  Logger.hpp  SpdlogHandler.cpp  SpdlogHandler.hpp  iLogger.h  main.cpp
src/iLogger/iLogger.xcodeproj/: project.pbxproj
src/iLogger/iLogger.xcodeproj/project.xcworkspace/xcuserdata/Martin.xcuserdatad/: UserInterfaceState.xcuserstate
src/iLogger/iLogger.xcodeproj/xcuserdata/Martin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/logging/: LogHandler.cpp  SpdlogHandler.cpp
